修改启动脚本参数